work on logging problems