@@ -1,13 +1,14 @@
 plugins {
     id 'java'
     id 'application'
+//    pulls the correct platform dependent native libraries on the module path
     id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
 group = 'io.github.vincemann'
 version = '1.1.0'
 
-// provides main module and class - analogous to:
+// provides main module and class - analog to:
 // --module io.github.vincemann.subtitlebuddy/io.github.vincemann.subtitlebuddy.Main
 application {
     mainModule = 'io.github.vincemann.subtitlebuddy'
@@ -36,13 +37,18 @@ test {
 
     doFirst {
         jvmArgs = [
-                "--module-path", classpath.asPath,
+                "--module-path", classpath.asPath+":build/classes/",
                 '--add-modules', 'javafx.controls,javafx.fxml',
+//                resolve some issues with javafx and testfx
                 '--add-reads', 'org.apache.commons.configuration2=ALL-UNNAMED',
+                '--add-exports', 'javafx.graphics/com.sun.javafx.application=org.testfx',
+                '--add-opens', 'javafx.graphics/com.sun.javafx.application=org.testfx'
         ]
     }
 }
 
+// create minimal runtime image, only containing the modules needed for the application
+// also ships jdk modules needed -> standalone executable
 task createRuntimeImage(type: Exec) {
     dependsOn 'jar'
     doFirst {
@@ -69,6 +75,7 @@ java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(17))
     }
+//    makes sure module path is correctly set up
     modularity.inferModulePath.set(true)
 }
 
@@ -79,6 +86,7 @@ run {
         println "Module path: ${classpath.asPath}"
         jvmArgs = [
                 "--module-path", classpath.asPath,
+//                modules are not part of sdk anymore - need to add them manually to module graph
                 "--add-modules", "javafx.controls,javafx.fxml",
                 '--add-reads', 'org.apache.commons.configuration2=ALL-UNNAMED',
         ]
@@ -99,8 +107,11 @@ repositories {
 
 dependencies {
 
+
+
     // need to use old version bc of segfaults on linux + keyboard strokes not working
     // needed to self modularize the jar in order to include for whatever reason + this way I can build a custom jlink image
+    // bc cant use automatic modules in jlink
     implementation files('lib/jnativehook-2.0.2-patched.jar')
 
     // dependency injection
@@ -110,10 +121,11 @@ dependencies {
     implementation('commons-io:commons-io:2.11.0')
 
     // logging
-    implementation 'org.slf4j:slf4j-api:1.7.30'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.14.1'
-    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
-    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation platform('org.apache.logging.log4j:log4j-bom:2.23.1')
+    implementation 'org.slf4j:slf4j-api'
+    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl'
+    implementation 'org.apache.logging.log4j:log4j-api'
+    runtimeOnly 'org.apache.logging.log4j:log4j-core'
 
     // validation
     implementation('javax.validation:validation-api:2.0.1.Final')
@@ -122,7 +134,7 @@ dependencies {
     implementation('com.google.guava:guava:33.0.0-jre')
 
     // utils
-    // lombok
+    // only needed for compilation - not at runtime
     compileOnly 'org.projectlombok:lombok:1.18.28'
     annotationProcessor 'org.projectlombok:lombok:1.18.28'
     // only here for resolving classpath files - exclude spring-jcl because I use own logging system
@@ -131,6 +143,7 @@ dependencies {
     }
     implementation('org.apache.commons:commons-configuration2:2.10.1')
     implementation('org.apache.commons:commons-lang3:3.12.0')
+    // some other dep depends on this
     implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
 
@@ -144,5 +157,4 @@ dependencies {
     testImplementation('org.loadui:testFx:3.1.2')
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
     testImplementation "junit:junit:4.13.2"
-
 }
